# MyWebServer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: LFU_cache.hpp  block_queue.h  block_queue.hpp  buffer.h  epoller.h  http_conn.h  http_connection.h  locker.h  log.h  memory_pool.h  public.h  sql_connection_pool.h  threadpool.h  threadpool.hpp  timer_minheap.h  webserver.h
resources/: login.html  loginError.html  other.html  otherError.html  picture.html  register.html  registerError.html  video.html  welcome.html
resources/css/: main.css
src/: 2022_07_29_ServerLog  buffer.cpp  epoller.cpp  http_conn.cpp  http_connection.cpp  log.cpp  main.cpp  makefile  server  sql_connection_pool.cpp  test.cpp  timer_minheap.cpp  webserver.cpp
test/: buffer.txt  client  client.c  makefile  start.sh  test  unitTest.cpp
webbench-1.5/: Makefile  webbench
